--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -73,10 +74,19 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     // Retrofit GSON Converter
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    // Logging Interceptor
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
     // Room
     implementation "androidx.room:room-runtime:2.5.2"
     kapt "androidx.room:room-compiler:2.5.2"
     implementation 'androidx.room:room-ktx:2.5.2'
     // Compose Glide
     implementation "com.github.bumptech.glide:compose:1.0.0-alpha.1"
+    // Dependency Injection
+    implementation("com.google.dagger:hilt-android:2.48")
+    kapt("com.google.dagger:hilt-android-compiler:2.44")
+    implementation("androidx.hilt:hilt-work:1.1.0")
+    kapt("androidx.hilt:hilt-compiler:1.1.0")
+    implementation("androidx.work:work-runtime-ktx:2.8.1")
+    implementation("androidx.hilt:hilt-navigation-compose:1.1.0")
 }
